src/dnsmasq.h

#  define _(S) (S)
#  define _(S) gettext(S)
/* struct sockaddr is not large enough to hold any address,
   and specifically not big enough to hold an IPv6 address.
   Blech. Roll our own. */
union mysockaddr {
    struct sockaddr sa;
    struct sockaddr_in in;
#if defined(HAVE_IPV6)
    struct sockaddr_in6 in6;
#endif
};
struct ServerFd {
    int fd;
    union mysockaddr source_addr;
//    char _interface[IF_NAMESIZE+1];
    std::string _interface;
    uint32_t preallocated;
    uint32_t used;
    uint32_t ifindex;
    struct ServerFd* next;
};
struct server {
    union mysockaddr addr, source_addr;
//    char interface[IF_NAMESIZE+1];
    std::string _interface;
    struct ServerFd* sfd;
    char* domain; /* set if this server only handles a domain. */
    int flags, tcpfd, edns_pktsz;
    time_t pktsz_reduced;
    uint32_t queries, failed_queries;
#ifdef HAVE_LOOP
    uint32_t uid;
#endif
    struct server* next;
};
int private_net(struct in_addr addr, int ban_localhost);
uint16_t rand16(void);
uint32_t rand32(void);
void* safe_malloc(size_t size);
void safe_strncpy(char* dest, const char* src, size_t size);
void* whine_malloc(size_t size);
int sa_len(union mysockaddr* addr);
int prettyprint_addr(union mysockaddr* addr, char* buf);
int wildcard_match(const char* wildcard, const char* match);
/* log.c */
void die(char* message, char* arg1, int exit_code) ATTRIBUTE_NORETURN;
void server_gone(struct server* server);
void lease_find_interfaces(time_t now);
/* bpf.c or netlink.c */
int iface_enumerate(int family, void* parm, int (callback)());
void dhcp_construct_contexts(time_t now);
void loop_send_probes(void);