src/slack.rs

pub const RTM_GETLINK: C2RustUnnamed_14 = 18;
pub const RTM_GETNEIGH: C2RustUnnamed_14 = 30;
pub type C2RustUnnamed_119 = libc::c_uint;
pub const __IFLA_MAX: C2RustUnnamed_11 = 52;
pub const IFLA_MAX_MTU: C2RustUnnamed_11 = 51;
pub const IFLA_MIN_MTU: C2RustUnnamed_11 = 50;
pub const IFLA_NEW_IFINDEX: C2RustUnnamed_11 = 49;
pub const IFLA_CARRIER_DOWN_COUNT: C2RustUnnamed_11 = 48;
pub const IFLA_CARRIER_UP_COUNT: C2RustUnnamed_11 = 47;
pub const IFLA_TARGET_NETNSID: C2RustUnnamed_11 = 46;
pub const IFLA_IF_NETNSID: C2RustUnnamed_11 = 46;
pub const IFLA_NEW_NETNSID: C2RustUnnamed_11 = 45;
pub const IFLA_EVENT: C2RustUnnamed_11 = 44;
pub const IFLA_XDP: C2RustUnnamed_11 = 43;
pub const IFLA_PAD: C2RustUnnamed_11 = 42;
pub const IFLA_GSO_MAX_SIZE: C2RustUnnamed_11 = 41;
pub const IFLA_GSO_MAX_SEGS: C2RustUnnamed_11 = 40;
pub const IFLA_PROTO_DOWN: C2RustUnnamed_11 = 39;
pub const IFLA_PHYS_PORT_NAME: C2RustUnnamed_11 = 38;
pub const IFLA_LINK_NETNSID: C2RustUnnamed_11 = 37;
pub const IFLA_PHYS_SWITCH_ID: C2RustUnnamed_11 = 36;
pub const IFLA_CARRIER_CHANGES: C2RustUnnamed_11 = 35;
pub const IFLA_PHYS_PORT_ID: C2RustUnnamed_11 = 34;
pub const IFLA_CARRIER: C2RustUnnamed_11 = 33;
pub const IFLA_NUM_RX_QUEUES: C2RustUnnamed_11 = 32;
pub const IFLA_NUM_TX_QUEUES: C2RustUnnamed_11 = 31;
pub const IFLA_PROMISCUITY: C2RustUnnamed_11 = 30;
pub const IFLA_EXT_MASK: C2RustUnnamed_11 = 29;
pub const IFLA_NET_NS_FD: C2RustUnnamed_11 = 28;
pub const IFLA_GROUP: C2RustUnnamed_11 = 27;
pub const IFLA_AF_SPEC: C2RustUnnamed_11 = 26;
pub const IFLA_PORT_SELF: C2RustUnnamed_11 = 25;
pub const IFLA_VF_PORTS: C2RustUnnamed_11 = 24;
pub const IFLA_STATS64: C2RustUnnamed_11 = 23;
pub const IFLA_VFINFO_LIST: C2RustUnnamed_11 = 22;
pub const IFLA_NUM_VF: C2RustUnnamed_11 = 21;
pub const IFLA_IFALIAS: C2RustUnnamed_11 = 20;
pub const IFLA_NET_NS_PID: C2RustUnnamed_11 = 19;
pub const IFLA_LINKINFO: C2RustUnnamed_11 = 18;
pub const IFLA_LINKMODE: C2RustUnnamed_11 = 17;
pub const IFLA_OPERSTATE: C2RustUnnamed_11 = 16;
pub const IFLA_WEIGHT: C2RustUnnamed_11 = 15;
pub const IFLA_MAP: C2RustUnnamed_11 = 14;
pub const IFLA_TXQLEN: C2RustUnnamed_11 = 13;
pub const IFLA_PROTINFO: C2RustUnnamed_11 = 12;
pub const IFLA_WIRELESS: C2RustUnnamed_11 = 11;
pub const IFLA_MASTER: C2RustUnnamed_11 = 10;
pub const IFLA_PRIORITY: C2RustUnnamed_11 = 9;
pub const IFLA_COST: C2RustUnnamed_11 = 8;
pub const IFLA_STATS: C2RustUnnamed_11 = 7;
pub const IFLA_QDISC: C2RustUnnamed_11 = 6;
pub const IFLA_LINK: C2RustUnnamed_11 = 5;
pub const IFLA_MTU: C2RustUnnamed_11 = 4;
pub const IFLA_IFNAME: C2RustUnnamed_11 = 3;
pub const IFLA_BROADCAST: C2RustUnnamed_11 = 2;
pub const IFLA_UNSPEC: C2RustUnnamed_11 = 0;
pub type C2RustUnnamed_129 = libc::c_uint;
pub const __IFA_MAX: C2RustUnnamed_12 = 11;
pub const IFA_TARGET_NETNSID: C2RustUnnamed_12 = 10;
pub const IFA_RT_PRIORITY: C2RustUnnamed_12 = 9;
pub const IFA_FLAGS: C2RustUnnamed_12 = 8;
pub const IFA_MULTICAST: C2RustUnnamed_12 = 7;
pub const IFA_ANYCAST: C2RustUnnamed_12 = 5;
pub const IFA_UNSPEC: C2RustUnnamed_12 = 0;
pub type C2RustUnnamed_133 = libc::c_uint;
pub const __NDA_MAX: C2RustUnnamed_13 = 13;
pub const NDA_PROTOCOL: C2RustUnnamed_13 = 12;
pub const NDA_SRC_VNI: C2RustUnnamed_13 = 11;
pub const NDA_LINK_NETNSID: C2RustUnnamed_13 = 10;
pub const NDA_MASTER: C2RustUnnamed_13 = 9;
pub const NDA_IFINDEX: C2RustUnnamed_13 = 8;
pub const NDA_VNI: C2RustUnnamed_13 = 7;
pub const NDA_PORT: C2RustUnnamed_13 = 6;
pub const NDA_VLAN: C2RustUnnamed_13 = 5;
pub const NDA_PROBES: C2RustUnnamed_13 = 4;
pub const NDA_CACHEINFO: C2RustUnnamed_13 = 3;
pub const NDA_UNSPEC: C2RustUnnamed_13 = 0;
pub type C2RustUnnamed_149 = libc::c_uint;
pub const __RTM_MAX: C2RustUnnamed_14 = 107;
pub const RTM_GETNEXTHOP: C2RustUnnamed_14 = 106;
pub const RTM_DELNEXTHOP: C2RustUnnamed_14 = 105;
pub const RTM_NEWNEXTHOP: C2RustUnnamed_14 = 104;
pub const RTM_GETCHAIN: C2RustUnnamed_14 = 102;
pub const RTM_DELCHAIN: C2RustUnnamed_14 = 101;
pub const RTM_NEWCHAIN: C2RustUnnamed_14 = 100;
pub const RTM_NEWCACHEREPORT: C2RustUnnamed_14 = 96;
pub const RTM_GETSTATS: C2RustUnnamed_14 = 94;
pub const RTM_NEWSTATS: C2RustUnnamed_14 = 92;
pub const RTM_GETNSID: C2RustUnnamed_14 = 90;
pub const RTM_DELNSID: C2RustUnnamed_14 = 89;
pub const RTM_NEWNSID: C2RustUnnamed_14 = 88;
pub const RTM_GETMDB: C2RustUnnamed_14 = 86;
pub const RTM_DELMDB: C2RustUnnamed_14 = 85;
pub const RTM_NEWMDB: C2RustUnnamed_14 = 84;
pub const RTM_GETNETCONF: C2RustUnnamed_14 = 82;
pub const RTM_DELNETCONF: C2RustUnnamed_14 = 81;
pub const RTM_NEWNETCONF: C2RustUnnamed_14 = 80;
pub const RTM_SETDCB: C2RustUnnamed_14 = 79;
pub const RTM_GETDCB: C2RustUnnamed_14 = 78;
pub const RTM_GETADDRLABEL: C2RustUnnamed_14 = 74;
pub const RTM_DELADDRLABEL: C2RustUnnamed_14 = 73;
pub const RTM_NEWADDRLABEL: C2RustUnnamed_14 = 72;
pub const RTM_NEWNDUSEROPT: C2RustUnnamed_14 = 68;
pub const RTM_SETNEIGHTBL: C2RustUnnamed_14 = 67;
pub const RTM_GETNEIGHTBL: C2RustUnnamed_14 = 66;
pub const RTM_NEWNEIGHTBL: C2RustUnnamed_14 = 64;
pub const RTM_GETANYCAST: C2RustUnnamed_14 = 62;
pub const RTM_GETMULTICAST: C2RustUnnamed_14 = 58;
pub const RTM_NEWPREFIX: C2RustUnnamed_14 = 52;
pub const RTM_GETACTION: C2RustUnnamed_14 = 50;
pub const RTM_DELACTION: C2RustUnnamed_14 = 49;
pub const RTM_NEWACTION: C2RustUnnamed_14 = 48;
pub const RTM_GETTFILTER: C2RustUnnamed_14 = 46;
pub const RTM_DELTFILTER: C2RustUnnamed_14 = 45;
pub const RTM_NEWTFILTER: C2RustUnnamed_14 = 44;
pub const RTM_GETTCLASS: C2RustUnnamed_14 = 42;
pub const RTM_DELTCLASS: C2RustUnnamed_14 = 41;
pub const RTM_NEWTCLASS: C2RustUnnamed_14 = 40;
pub const RTM_GETQDISC: C2RustUnnamed_14 = 38;
pub const RTM_DELQDISC: C2RustUnnamed_14 = 37;
pub const RTM_NEWQDISC: C2RustUnnamed_14 = 36;
pub const RTM_GETRULE: C2RustUnnamed_14 = 34;
pub const RTM_DELRULE: C2RustUnnamed_14 = 33;
pub const RTM_NEWRULE: C2RustUnnamed_14 = 32;
pub const RTM_DELNEIGH: C2RustUnnamed_14 = 29;
pub const RTM_GETROUTE: C2RustUnnamed_14 = 26;
pub const RTM_DELROUTE: C2RustUnnamed_14 = 25;
pub const RTM_SETLINK: C2RustUnnamed_14 = 19;
pub const RTM_DELLINK: C2RustUnnamed_14 = 17;
pub const RTM_BASE: C2RustUnnamed_14 = 16;
pub type C2RustUnnamed_15 = libc::c_uint;
pub const __RTN_MAX: C2RustUnnamed_15 = 12;
pub const RTN_XRESOLVE: C2RustUnnamed_15 = 11;
pub const RTN_NAT: C2RustUnnamed_15 = 10;
pub const RTN_THROW: C2RustUnnamed_15 = 9;
pub const RTN_PROHIBIT: C2RustUnnamed_15 = 8;
pub const RTN_UNREACHABLE: C2RustUnnamed_15 = 7;
pub const RTN_BLACKHOLE: C2RustUnnamed_15 = 6;
pub const RTN_MULTICAST: C2RustUnnamed_15 = 5;
pub const RTN_ANYCAST: C2RustUnnamed_15 = 4;
pub const RTN_BROADCAST: C2RustUnnamed_15 = 3;
pub const RTN_LOCAL: C2RustUnnamed_15 = 2;
pub const RTN_UNSPEC: C2RustUnnamed_15 = 0;
pub type rt_scope_t = libc::c_uint;
pub const RT_SCOPE_NOWHERE: rt_scope_t = 255;
pub const RT_SCOPE_HOST: rt_scope_t = 254;
pub const RT_SCOPE_SITE: rt_scope_t = 200;
pub const RT_SCOPE_UNIVERSE: rt_scope_t = 0;
pub type rt_class_t = libc::c_uint;
pub const RT_TABLE_MAX: rt_class_t = 4294967295;
pub const RT_TABLE_DEFAULT: rt_class_t = 253;
pub const RT_TABLE_COMPAT: rt_class_t = 252;
pub const RT_TABLE_UNSPEC: rt_class_t = 0;
#[inline]
unsafe extern "C" fn __bswap_116(mut __bsx: __uint16_t) -> __uint16_t {
    return (__bsx >> 8 & 0xff |
        (__bsx & 0xff) <<
            8) ; /* autobind */
}







#[inline]





#[inline]
unsafe extern "C" fn mknodat(mut __fd: i32,
                             mut __path: *const libc::c_char,
                             mut __mode: __mode_t, mut __dev: __dev_t)
                             -> i32 {
    return __xmknodat(0, __fd, __path, __mode, &mut __dev);
}

extern "C" {




    #[no_mangle]
    fn fclose(__stream:  &mut FILE)  -> i32;
    #[no_mangle]
    fn fopen(_: *const libc::c_char, _: *const libc::c_char) -> FILE;




    #[no_mangle]
    fn fgets(__s: &mut String, __n: i32, __stream:  &mut FILE)
             -> &mut String;

    #[no_mangle]
    fn socket(__domain: i32, __type: i32,
              __protocol: i32) -> i32;
    #[no_mangle]
    fn bind(__fd: i32, __addr: __CONST_NetAddress_ARG, __len: socklen_t)
            -> i32;
    #[no_mangle]
    fn getsockopt(__fd: i32, __level: i32,
                  __optname: i32, __optval:Vec<u8>,
                  __optlen:  &mut socklen_t)  -> i32;
    #[no_mangle]
    fn setsockopt(__fd: i32, __level: i32,
                  __optname: i32, __optval: *const libc::c_void,
                  __optlen: socklen_t) -> i32;
    #[no_mangle]
    fn listen(__fd: i32, __n: i32) -> i32;
    #[no_mangle]
    static in6addr_any: in6_addr;
    #[no_mangle]
    fn inet_addr(__cp: *const libc::c_char) -> in_addr_t;
    #[no_mangle]
    fn inet_pton(__af: i32, __cp: *const libc::c_char,
                 __buf:Vec<u8>) -> i32;




    #[no_mangle]
    fn ioctl(__fd: i32, __request: u32, _: ...)
             -> i32;
    #[no_mangle]
    fn memset(_:Vec<u8>, _: i32, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memcmp(_: *const libc::c_void, _: *const libc::c_void,
              _: u32) -> i32;



    #[no_mangle]
    fn strncmp(_: *const libc::c_char, _: *const libc::c_char,
               _: u32) -> i32;

    #[no_mangle]
    fn strtok(_: &mut String, _: *const libc::c_char)
              -> &mut String;

    #[no_mangle]
    fn strerror(_: i32) -> &mut String;
    #[no_mangle]
    fn if_nametoindex(__ifname: *const libc::c_char) -> libc::c_uint;
    #[no_mangle]
    fn close(__fd: i32) -> i32;





    #[no_mangle]
    fn free(__ptr:Vec<u8>);
    #[no_mangle]
    fn fcntl(__fd: i32, __cmd: i32, _: ...) -> i32;


    #[no_mangle]
    fn __errno_location() -> ;





    #[no_mangle]
    fn private_net(addr: in_addr, ban_localhost: i32) -> i32;
    #[no_mangle]
    fn rand16() -> u16;
    #[no_mangle]
    fn rand32() -> u32_0;
    #[no_mangle]
    fn safe_malloc(size: usize) ->Vec<u8>;
    #[no_mangle]
    fn safe_strncpy(dest: &mut String, src: *const libc::c_char,
                    size: usize);
    #[no_mangle]
    fn whine_malloc(size: usize) ->Vec<u8>;
    #[no_mangle]
    fn sa_len(addr: NetAddress) -> i32;


    #[no_mangle]
    fn prettyprint_addr(addr: NetAddress, buf: &mut String)
                        -> i32;
    #[no_mangle]
    fn wildcard_match(wildcard: *const libc::c_char,
                      match_0: *const libc::c_char) -> i32;
    #[no_mangle]
    fn die(message: &mut String, arg1: &mut String,
           exit_code: i32) -> !;

    #[no_mangle]
    fn server_gone(server: Server);
    #[no_mangle]
    fn loop_send_probes();
    #[no_mangle]
    fn iface_enumerate(family: i32, parm:Vec<u8>,
                       callback:
                       Option<unsafe extern "C" fn() -> i32>)
                       -> i32;
    #[no_mangle]
    fn lease_find_interfaces(now: time::Instant);
    #[no_mangle]
    fn dhcp_construct_contexts(now: time::Instant);
}



pub type __ino_t = libc::c_ulong;
pub type __ino64_t = libc::c_ulong;








pub type dev_t = __dev_t;


























#[derive(Copy, Clone)]
#[repr(C)]
pub struct ipv6_mreq {
    pub ipv6mr_multiaddr: in6_addr,
    pub ipv6mr_interface: u32,
}





pub const IFF_DYNAMIC: C2RustUnnamed_1 = 32768;
pub const IFF_AUTOMEDIA: C2RustUnnamed_1 = 16384;
pub const IFF_PORTSEL: C2RustUnnamed_1 = 8192;
pub const IFF_MULTICAST: C2RustUnnamed_1 = 4096;
pub const IFF_SLAVE: C2RustUnnamed_1 = 2048;
pub const IFF_MASTER: C2RustUnnamed_1 = 1024;
pub const IFF_ALLMULTI: C2RustUnnamed_1 = 512;
pub const IFF_PROMISC: C2RustUnnamed_1 = 256;
pub const IFF_NOARP: C2RustUnnamed_1 = 128;
pub const IFF_RUNNING: C2RustUnnamed_1 = 64;
pub const IFF_NOTRAILERS: C2RustUnnamed_1 = 32;
pub const IFF_POINTOPOINT: C2RustUnnamed_1 = 16;
pub const IFF_LOOPBACK: C2RustUnnamed_1 = 8;
pub const IFF_DEBUG: C2RustUnnamed_1 = 4;
pub const IFF_BROADCAST: C2RustUnnamed_1 = 2;
pub const IFF_UP: C2RustUnnamed_1 = 1;
